--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,11 @@ scikit-image==0.16.2
 innvestigate==1.0.8
 opencv-python==4.1.1.26
 gym==0.15.4
+pandas==0.25.3
+numpy==1.17.4
+scipy==1.3.3
+seaborn==0.10.0
+joblib==0.14.1
+
+
+
